overflow-x fixed
overflow-x fixed

--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -26,6 +26,7 @@
 /*preloader */
 html {
     width: 100%;
+    overflow-x: hidden;
 }
 body {
     font-family: 'IRANSans';
